# adventofcode-2021

./: pyproject.toml
day1/: main.py  test_main.py
day10/: main.py  test_main.py
day11/: main.py  test_main.py
day12/: main.py  test_main.py
day13/: main.py  test_main.py
day14/: main.py  test_main.py
day15/: main.py  test_main.py
day16/: main.py  test_main.py
day17/: main.py  test_main.py
day18/: main.py  test_main.py
day19/: main.py  test_main.py
day2/: main.py  test_main.py
day20/: main.py  test_main.py
day21/: main.py  test_main.py
day22/: main.py  test_main.py
day23/: test_main.py
day24/: main.py  test_main.py
day25/: main.py  test_main.py
day3/: main copy.py  main.py  test_main.py
day4/: main.py  test_main.py
day5/: main.py  test_main.py
day6/: main.py  test_main.py
day7/: main.py  test_main.py
day8/: main.py  test_main.py
day9/: main.py  test_main.py
