[tool.poetry]
name = "adventofcode-2021"
version = "0.1.0"
description = ""
authors = ["Meir <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.2.0"
networkx = {extras = ["default"], version = "^3.2.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
